--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -77,7 +77,7 @@ Although the naive implementation used in this thesis is viable for integrating 
 Usability would be improved by providing the method as a part of statistical software, likely via the `aghq` package.
 The primary difficulty which would have to be overcome to do so is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
 
-(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM, increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). More broadly, it would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which more accurate approximations are required.
+(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM (Section \@ref(sec:loaloa)), increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). More broadly, it would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which more accurate approximations are required.
 
 ```{r conditional-simulation-diff-k-fixed, fig.cap="(ref:conditional-simulation-diff-k-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.png")
