--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -44,20 +44,20 @@ if(knitr::is_html_output()) {
 
 if(knitr::is_latex_output()) {
   gt_available_surveys %>%
-    gt::sub_values(values = "[/]cmark", replacement = "\\cmark") %>%
-    gt::sub_values(values = "[/]xmark", replacement = "\\xmark") %>%
+    gt::sub_values(values = "[/]cmark", replacement = "Yes") %>%
+    gt::sub_values(values = "[/]xmark", replacement = "No") %>%
     gt::as_latex()
 }
 ```
 
-| Survey              | Exclusion reason                           |
+| Survey              | Reason for exclusion                       |
 |---------------------|--------------------------------------------|
 | Mozambique 2003 DHS | No GPS coordinates available to place survey clusters within districts. |
 | Tanzania 2015 DHS   | Insufficient sexual behaviour questions.                                |
 | Uganda 2004 AIS     | Unable to download region boundaries.                                   |
 | Zambia 2002 DHS     | No GPS coordinates available to place survey clusters within districts. |
 
-Table: (\#tab:surveys-excluded) All of that household surveys that were excluded from the analysis.
+Table: (\#tab:surveys-excluded) All of that household surveys that were excluded from the risk group model in Section \@ref(risk-group-model).
 
 ## Spatial analysis levels
 
