--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -15,65 +15,64 @@ If you notice any typos or other issues with the work, feel free to open an [iss
 ## Abbreviations {-}
 
 | Abbreviation | Definition                                       |
-|:--------|:-------------------------------------------------|
-| HIV     | Human Immunodeficiency Virus                     |
-| DALY    | Disability Adjusted Life Year                    |
-| AIDS    | Acquired ImmunoDeficiency Syndrome               |
-| UNAIDS  | The Joint United Nations Programme on HIV/AIDS   |
-| PEPFAR  | President’s Emergency Plan for AIDS Relief       |
-| Global Fund | Global Fund to Fight AIDS, Tuberculosis, and Malaria |
-| DHS     | Demographic and Health Surveys                   |
-| AIS     | AIDS Indicator Survey                            |
-| PrEP    | Pre-Exposure Prophylaxis                         |
-| PEP     | Post-Exposure Prophylaxis                        |
-| FSW     | Female Sex Worker(s)                             |
-| MSM     | Men who have Sex with Men                        |
-| PWID    | People Who Inject Drugs                          |
-| TGP     | Transgender People                               |
-| ANC     | Antenatal Clinic                                 |
-| CDC     | Centers for Disease Control and Prevention       |
-| UAT     | Unlinked Anonymous Testing                       |
-| PMTCT   | Prevention of Mother-to-Child Transmission       |
-| PLHIV   | People Living with HIV                           |
-| TaSP    | Treatment as Prevention                          |
-| STI     | Sexually Transmitted Infection                   |
-| ART     | Antiretroviral Therapy                           |
-| VMMC    | Voluntary Medical Male Circumcision              |
-| PHIA    | Population-based HIV Impact Assessment           |
-| SSA     | Sub-Saharan Africa                               |
-| DDC     | Data Defect Correlation                          |
-| MCMC    | Markov Chain Monte Carlo                         |
-| NUTS    | No-U-Turn Sampler                                |
-| VI      | Variational Inference                            |
-| INLA    | Integrated Nested Laplace Approximation          |
-| GP      | Gaussian Process                                 |
-| CAR     | Conditionally Auto-regressive                    |
-| ICAR    | Intrinsic Conditionally Auto-regressive           |
-| SAE     | Small-Area Estimation                            |
-| GMRF    | Gaussian Markov Random Field                     |
-| HMC     | Hamiltonian Monte Carlo                          |
-| LM      | Linear Model                                     |
-| GLM     | Generalised Linear Model                         |
-| GLMM    | Generalised Linear Mixed effects Model           |
-| LGM     | Latent Gaussian Model                            |
-| ELGM    | Extended Latent Gaussian Model                   |
-| BF      | Bayes Factor                                     |
-| CPO     | Conditional Predictive Ordinate                  |
-| DIC     | Deviance Information Criterion                   |
-| BIC     | Bayesian Information Criterion                   |
-| WAIC    | Watanabe-Akaike Information Criterion            |
-| SR      | Scoring Rule                                     |
-| SPSR    | Strictly Proper Scoring Rule                     |
-| CRPS    | Continuous Ranked Probability Score              |
-| LS      | Log Score                                        |
-| PIT     | Probability Integral Transform                   |
-| ECDF    | Empirical Cumulative Difference Function         |
-| ESS     | Effective Sample Size                            |
-| IID     | Independent and Identically Distributed          |
-| PPL     | Probabilistic Programming Language               |
-| CCD     | Central Composite Design                         |
-| EB      | Empirical Bayes                                  |
-| AGHQ    | Adaptive Gauss-Hermite Quadrature                |
+|:-------------|:-------------------------------------------------|
+| AIDS         | Acquired ImmunoDeficiency Syndrome               |
+| AIS          | AIDS Indicator Survey                            |
+| ANC          | Antenatal Clinic                                 |
+| AGHQ         | Adaptive Gauss-Hermite Quadrature                |
+| ART          | Antiretroviral Therapy                           |
+| BIC          | Bayesian Information Criterion                   |
+| BF           | Bayes Factor                                     |
+| CAR          | Conditionally Auto-regressive                    |
+| CCD          | Central Composite Design                         |
+| CDC          | Centers for Disease Control and Prevention       |
+| CPO          | Conditional Predictive Ordinate                  |
+| CRPS         | Continuous Ranked Probability Score              |
+| DALY         | Disability Adjusted Life Year                    |
+| DDC          | Data Defect Correlation                          |
+| DHS          | Demographic and Health Surveys                   |
+| DIC          | Deviance Information Criterion                   |
+| EB           | Empirical Bayes                                  |
+| ECDF         | Empirical Cumulative Difference Function         |
+| ELGM         | Extended Latent Gaussian Model                   |
+| ESS          | Effective Sample Size                            |
+| FSW          | Female Sex Worker(s)                             |
+| GA           | Gaussian Process                                 |
+| GLM          | Generalised Linear Model                         |
+| GLMM         | Generalised Linear Mixed effects Model           |
+| GMRF         | Gaussian Markov Random Field                     |
+| Global Fund  | Global Fund to Fight AIDS, Tuberculosis, and Malaria |
+| HMC          | Hamiltonian Monte Carlo                          |
+| HIV          | Human Immunodeficiency Virus                     |
+| ICAR         | Intrinsic Conditionally Auto-regressive           |
+| IID          | Independent and Identically Distributed          |
+| INLA         | Integrated Nested Laplace Approximation          |
+| LM           | Linear Model                                     |
+| LGM          | Latent Gaussian Model                            |
+| LS           | Log Score                                        |
+| MCMC         | Markov Chain Monte Carlo                         |
+| MSM          | Men who have Sex with Men                        |
+| NUTS         | No-U-Turn Sampler                                |
+| PEP          | Post-Exposure Prophylaxis                        |
+| PEPFAR       | President’s Emergency Plan for AIDS Relief       |
+| PHIA         | Population-based HIV Impact Assessment           |
+| PIT          | Probability Integral Transform                   |
+| PLHIV        | People Living with HIV                           |
+| PPL          | Probabilistic Programming Language               |
+| PrEP         | Pre-Exposure Prophylaxis                         |
+| PMTCT        | Prevention of Mother-to-Child Transmission       |
+| PWID         | People Who Inject Drugs                          |
+| SAE          | Small-Area Estimation                            |
+| SR           | Scoring Rule                                     |
+| SPSR         | Strictly Proper Scoring Rule                     |
+| SSA          | Sub-Saharan Africa                               |
+| STI          | Sexually Transmitted Infection                   |
+| TGP          | Transgender People                               |
+| TaSP         | Treatment as Prevention                          |
+| UNAIDS       | The Joint United Nations Programme on HIV/AIDS   |
+| VI           | Variational Inference                            |
+| VMMC         | Voluntary Medical Male Circumcision              |
+| WAIC         | Watanabe-Akaike Information Criterion            |
 
 ## Notations {-}
 
