--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -11,67 +11,62 @@
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{List of Abbreviations}{3.2cm}
 
-\item[HIV] Human Immunodeficiency Virus.
-\item[DALY] Disability Adjusted Life Year.
 \item[AIDS] Acquired ImmunoDeficiency Syndrome.
-\item[UNAIDS] The Joint United Nations Programme on HIV/AIDS.
-\item[PEPFAR] President’s Emergency Plan for AIDS Relief.
-\item[Global Fund] Global Fund to Fight AIDS, Tuberculosis, and Malaria.
-\item[HIV] Demographic and Health Surveys.
 \item[AIS] AIDS Indicator Survey.
-\item[PrEP] Pre-Exposure Prophylaxis.
-\item[PEP] Post-Exposure Prophylaxis.
-\item[FSW] Female Sex Worker(s).
-\item[MSM] Men who have Sex with Men.
-\item[PWID] People Who Inject Drugs.
-\item[TGP] Transgender People
 \item[ANC] Antenatal Clinic.
-\item[CDC] Centers for Disease Control and Prevention.
-\item[UAT] Unlinked Anonymous Testing.
-\item[PMTCT] Prevention of Mother-to-Child Transmission.
-\item[PLHIV] People Living with HIV.
-\item[TaSP] Treatment as Prevention.
-\item[STI] Sexually Transmitted Infection.
+\item[AGHQ] Adaptive Gauss-Hermite Quadrature.
 \item[ART] Antiretroviral Therapy.
-\item[VMMC] Voluntary Medical Male Circumcision.
-\item[DHS] Demographic and Health Surveys.
-\item[PHIA] Population-based HIV Impact Assessment.
-\item[SSA] Sub-Saharan Africa.
-
-\item[DDC] Data Defect Correlation.
-\item[MCMC] Markov Chain Monte Carlo.
-\item[NUTS] No-U-Turn Sampler.
-\item[VI] Variational Inference.
-\item[INLA] Integrated Nested Laplace Approximation.
-\item[GP] Gaussian Process.
+\item[BF] Bayes Factor.
+\item[BIC] Bayesian Information Criterion.
+\item[CCD] Central Composite Design.
 \item[CAR] Conditionally Auto-regressive.
-\item[ICAR] Intrinsic Conditionally Auto-regressive.
-\item[SAE] Small-Area Estimation.
-\item[GMRF] Gaussian Markov Random Field.
-\item[HMC] Hamiltonian Monte Carlo.
-\item[GMRF] Gauss-Markov Random Field.
-\item[HMC] Hamiltonian Monte Carlo.
-\item[LM] Linear Model.
+\item[CDC] Centers for Disease Control and Prevention.
+\item[CCP] Conditional Predictive Ordinate.
+\item[CRAN] Comprehensive R Archive Network.
+\item[CRPS] Continuous Ranked Probability Score.
+\item[DALY] Disability Adjusted Life Year.
+\item[DDC] Data Defect Correlation.
+\item[DHS] Demographic and Health Surveys.
+\item[DIC] Deviance Information Criterion.
+\item[EB] Empirical Bayes.
+\item[ECDF] Empirical Cumulative Difference Function.
+\item[ELGM] Extended Latent Gaussian Model.
+\item[ESS] Effective Sample Size.
+\item[FSW] Female Sex Worker(s).
+\item[GC] Generalised Linear Model.
 \item[GLM] Generalised Linear Model.
 \item[GLMM] Generalised Linear Mixed effects Model.
+\item[GMRF] Gaussian Markov Random Field.
+\item[GP] Gaussian Process.
+\item[HIV] Human Immunodeficiency Virus.
+\item[HMC] Hamiltonian Monte Carlo.
+\item[ICAR] Intrinsic Conditionally Auto-regressive.
+\item[IID] Independent and Identically Distributed.
+\item[INLA] Integrated Nested Laplace Approximation.
+\item[LM] Linear Model.
 \item[LGM] Latent Gaussian Model.
-\item[ELGM] Extended Latent Gaussian Model.
-\item[BF] Bayes Factor.
-\item[CPO] Conditional Predictive Ordinate.
-\item[DIC] Deviance Information Criterion.
-\item[BIC] Bayesian Information Criterion.
-\item[WAIC] Watanabe-Akaike Information Criterion.
+\item[LS] Log Score.
+\item[MCMC] Markov Chain Monte Carlo.
+\item[MSM] Men who have Sex with Men.
+\item[NUTS] No-U-Turn Sampler.
+\item[PEP] Post-Exposure Prophylaxis.
+\item[PEPFAR] President’s Emergency Plan for AIDS Relief.
+\item[PHIA] Population-based HIV Impact Assessment.
+\item[PIT] Probability Integral Transform.
+\item[PLHIV] People Living with HIV.
+\item[PWID] People Who Inject Drugs.
+\item[PPL] Probabilistic Programming Language.
+\item[PrEP] Pre-Exposure Prophylaxis.
+\item[SAE] Small-Area Estimation.
 \item[SR] Scoring Rule.
 \item[SPSR] Strictly Proper Scoring Rule.
-\item[CRPS] Continuous Ranked Probability Score.
-\item[LS] Log Score.
-\item[PIT] Probability Integral Transform.
-\item[ECDF] Empirical Cumulative Difference Function.
-\item[ESS] Effective Sample Size.
-\item[IID] Independent and Identically Distributed.
-\item[PPL] Probabilistic Programming Language.
-\item[CCD] Central Composite Design.
-\item[EB] Empirical Bayes.
-\item[AGHQ] Adaptive Gauss-Hermite Quadrature.
+\item[SSA] Sub-Saharan Africa.
+\item[STI] Sexually Transmitted Infection.
+\item[TaSP] Treatment as Prevention.
+\item[TGP] Transgender People.
+\item[UNAIDS] The Joint United Nations Programme on HIV/AIDS.
+\item[VI] Variational Inference.
+\item[VMMC] Voluntary Medical Male Circumcision.
+\item[WAIC] Watanabe-Akaike Information Criterion.
 
 \end{mclistof} 
