--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -21,7 +21,7 @@ aghq_nuts_comparison_diagnostics_fik <- dplyr::filter(aghq_nuts_comparison_diagn
 aghq_nuts_comparison_diagnostics_ik <- dplyr::filter(aghq_nuts_comparison_diagnostics, inf_model == "IK")
 ```
 
-(ref:time-taken) A comparison of time taken to fit AGHQ via `aghq` as compared with NUTS via `tmbstan` for each inferential model. For the models run using NUTS via `tmbstan` there was significant variation in time taken depending on initial random seed. As such, these timings and more broadly the inferences obtained from NUTS in Appendix \@(aghq-nuts) should be interpreted with appropriate skepticism.
+(ref:time-taken) A comparison of time taken to fit AGHQ via `aghq` as compared with NUTS via `tmbstan` for each inferential model. For the models run using NUTS via `tmbstan` there was significant variation in time taken depending on initial random seed. As such, these timings and more broadly the inferences obtained from NUTS in Appendix \@ref(aghq-nuts) should be interpreted with appropriate skepticism.
 
 ```{r time-taken, fig.cap="(ref:time-taken)"}
 path <- "figures/beyond-borders/check_aghq-nuts/time-taken.png"
@@ -84,24 +84,24 @@ knitr::include_graphics(path)
 ## Lengthscale prior sensitivity {#lengthscale-prior}
 
 | Description | Prior | Additional details  |
-|:------------|:------|:--------------------|
-| Gamma | $l \sim \text{Gamma}(1, 1)$ ||
-| Geometry-informed inverse-gamma | $l \sim \text{IG}(a, b)$ | The parameters $a$ and $b$ chosen such that 1\% of the prior mass was below 0.1 and 1\% of the prior mass was above the maximum distance between points [@betancourt2017robust] |
+|:-------|:------|:--------------------|
+| Gamma | $l \sim \text{Gamma}(1, 1)$ |$-$ |
+| Geometry-informed inverse-gamma | $l \sim \text{IG}(a, b)$ | The parameters $a$ and $b$ chosen such that 5\% of the prior mass was below and above the 5% and 95% quantile for distance between points [@betancourt2017robust] |
 | Geometry-informed normal | $l \sim \mathcal{N}^{+}(0, \sigma)$ | The parameter $\sigma$ set as one third the difference between the minimum and maximum distance between points [@betancourt2017robust] |
-| Log-normal | $l \sim \text{Log-normal}(0, 1)$ | |
+| Log-normal | $l \sim \text{Log-normal}(0, 1)$ | $-$ |
 | Non-informative | $p(l) = 1$ | This is an improper prior in that it does not integrate to one |
 | Oracle normal | $l \sim \mathcal{N}^{+}(2.5, 1)$ | The mean of this prior was set to the true value of the lengthscale |
 
-Table: (\#tab:lengthscale-prior) Six lengthscale prior distributions were considered for use.
+Table: (\#tab:lengthscale-prior) Six lengthscale prior distributions were considered for use in the simulation (Section \@ref(simulation-study)) and HIV prevalence (Section \@ref(hiv-study)) studies.
 
-(ref:lengthscale-prior) The density for each lengthscale prior distributions as given in Table \@ref(tab:lengthscale-prior).
+(ref:lengthscale-prior) The probability density for each lengthscale prior distribution as given in Table \@ref(tab:lengthscale-prior).
 
 ```{r lengthscale-prior, fig.cap="(ref:lengthscale-prior)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-prior.png")
 knitr::include_graphics(path)
 ```
 
-(ref:lengthscale-posterior) Lengthscale posterior distributions obtained using NUTS to fit a centroid kernel model to integrated kernel data. Six different lengthscale prior distributions were considered \@ref(tab:lengthscale-prior). The geometry used was the grid (Panel \@ref(fig:geometries)E). 
+(ref:lengthscale-posterior) Lengthscale posterior distributions obtained using NUTS to fit a centroid kernel model to integrated kernel data. The true value, 2.5, is shown as a dashed vertical line. Six different lengthscale prior distributions were considered as given in Table \@ref(tab:lengthscale-prior). The geometry used was the grid (Panel \@ref(fig:geometries)E). 
 
 ```{r lengthscale-posterior, fig.cap="(ref:lengthscale-posterior)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-posterior.png")
@@ -121,7 +121,7 @@ knitr::include_graphics(path)
 
 ### BYM2 proportion {#bym2-proportion}
 
-(ref:proportion-recovery) The BYM2 proportion parameter posterior mean and 95% credible interval obtained for the first 40 simulation replicates for the realistic geometries. When the simulated data is IID, the BYM2 proportion parameter is in the majority of cases below 0.5, corresponding to mostly IID (spatially unstructured) noise. When the simulated data is either Besag or IK, the BYM2 proportion parameter is in the majority of cases above 0.5, corresponding to mostly Besag (spatially structured) noise.
+(ref:proportion-recovery) The BYM2 proportion parameter posterior mean and 95% credible interval obtained for the first 40 simulation replicates for the realistic geometries. When the simulated data is IID, the BYM2 proportion parameter is in the majority of cases below 0.5, corresponding to have inferred that the noise is mostly IID (spatially unstructured) When the simulated data is either Besag or IK, the BYM2 proportion parameter is in the majority of cases above 0.5, corresponding to have inferred that the noise is mostly Besag (spatially structured).
 
 ```{r proportion-recovery, fig.cap="(ref:proportion-recovery)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/proportion-recovery.png")
@@ -292,7 +292,7 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 
 ### BYM2 proportion
 
-(ref:proportion-posteriors) The BYM2 proportion hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(tab:hiv-surveys)). A value of zero corresponds to IID noise. A value of one corresponds to Besag noise. For each survey, apart from the Côte d’Ivoire 2017 PHIA, the posterior distribution for the BYM2 proportion is concentrated towards a value of one. This result can be interpreted as suggesting that the variation in HIV prevalence from these surveys is spatially structured.
+(ref:proportion-posteriors) The BYM2 proportion hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(tab:hiv-surveys)). A value of zero corresponds to IID noise. A value of one corresponds to Besag noise. For each survey, excluding the Côte d’Ivoire 2017 PHIA, the posterior distribution for the BYM2 proportion is concentrated towards a value of one. This result can be interpreted as suggesting that the variation in HIV prevalence from these surveys is spatially structured.
 
 ```{r proportion-posteriors, fig.cap="(ref:proportion-posteriors)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/proportion-posteriors.png"))
@@ -346,25 +346,25 @@ if(knitr::is_latex_output()) {
 
 #### Continuous ranked probability score
 
-(ref:crps-mean-se-civ2017phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
+(ref:crps-mean-se-civ2017phia) The pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r crps-mean-se-civ2017phia, fig.cap="(ref:crps-mean-se-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ2017phia.png"))
 ```
 
-(ref:crps-mean-se-mwi2016phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
+(ref:crps-mean-se-mwi2016phia) The pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
 
 ```{r crps-mean-se-mwi2016phia, fig.cap="(ref:crps-mean-se-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-mwi2016phia.png"))
 ```
 
-(ref:crps-mean-se-tza2017phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
+(ref:crps-mean-se-tza2017phia) The pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
 
 ```{r crps-mean-se-tza2017phia, fig.cap="(ref:crps-mean-se-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-tza2017phia.png"))
 ```
 
-(ref:crps-mean-se-zwe2016phia) The pointwise CRPS for $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
+(ref:crps-mean-se-zwe2016phia) The pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation, with mean and 95% credible interval, for the Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
 
 ```{r crps-mean-se-zwe2016phia, fig.cap="(ref:crps-mean-se-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-zwe2016phia.png"))
