--- a/references.bib
+++ b/references.bib
@@ -748,7 +748,7 @@
 
 @misc{esra2023improved,
   title = {{Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023}},
-  author = {Esra, Rachel},
+  author = {Esra, Rachel and Mmelesi, Mpho and Ketlogetswe, Akeem T. and Wolock, Timothy M. and Howes, Adam and Nong, Tlotlo and Matlhaga, Matshelo Tina and Ratladi, Siphiwe and Ramaabya, Dinah and Imai-Eaton, Jeffrey W},
   year = 2023
 }
 
